--- a/pom.xml
+++ b/pom.xml
@@ -125,5 +125,11 @@
       <version>2.3.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-rest</artifactId>
+      <version>1.2.5.RELEASE</version>
+    </dependency>
+
   </dependencies>
 </project>
